--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,9 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
+google.clientId1=161955849471-f6gbmsebsd4q9m9700o8v5ni06gagpr4.apps.googleusercontent.com
+google.clientId2=161955849471-bguqectccp35mjt0lmba3k3bko5bd2ur.apps.googleusercontent.com
+
 aws.accessKeyId=AKIAQZJZ7SLFGT5QW66W
 aws.secretKey=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
 
