Subida imagen de perfil

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,8 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
+aws.bucket.s3=aws-social-media-gokias
+
 google.clientId1=161955849471-f6gbmsebsd4q9m9700o8v5ni06gagpr4.apps.googleusercontent.com
 google.clientId2=161955849471-bguqectccp35mjt0lmba3k3bko5bd2ur.apps.googleusercontent.com
 
