Credenciales postgres railway

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/social-media
+spring.datasource.url=postgresql://postgres:b3f-*EF*5dDD*43FeecA*-*CD4C*5-fG@postgres.railway.internal:5432/railway
 spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.password=b3f-*EF*5dDD*43FeecA*-*CD4C*5-fG
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa-sql=true
