Cambio url database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=postgresql://postgres:b3f-*EF*5dDD*43FeecA*-*CD4C*5-fG@postgres.railway.internal:5432/railway
+spring.datasource.url=postgresql://postgres:b3f-*EF*5dDD*43FeecA*-*CD4C*5-fG@monorail.proxy.rlwy.net:26820/railway
 spring.datasource.username=postgres
 spring.datasource.password=b3f-*EF*5dDD*43FeecA*-*CD4C*5-fG
 spring.datasource.driver-class-name=org.postgresql.Driver
