Push config application properties docker

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=postgresql://postgres:b3f-*EF*5dDD*43FeecA*-*CD4C*5-fG@postgres.railway.internal:5432/railway
-spring.datasource.username=postgres
-spring.datasource.password=b3f-*EF*5dDD*43FeecA*-*CD4C*5-fG
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa-sql=true
@@ -11,12 +11,13 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-aws.bucket.s3=aws-social-media-gokias
+aws.bucket.s3=${AWS_NAME_BUCKET}
 
-google.clientId1=161955849471-f6gbmsebsd4q9m9700o8v5ni06gagpr4.apps.googleusercontent.com
-google.clientId2=161955849471-bguqectccp35mjt0lmba3k3bko5bd2ur.apps.googleusercontent.com
+google.clientId1=${GOOGLE_CLIENT_ID1}
+google.clientId2=${GOOGLE_CLIENT_ID2}
 
-aws.accessKeyId=AKIAQZJZ7SLFGT5QW66W
-aws.secretKey=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
+aws.accessKeyId=${AWS_ACCESS_KEY_ID}
+aws.secretKey=${AWS_SECRET_KEY}
+
 
 
